# bianqian_windows

./: .gitignore  IMPROVEMENT_PLAN.md  OPTIMIZATION_PLAN.md  PROJECT_SPECIFICATION.md  README.md  _create_release.py  _patch_msi.py  _update_release.py  groups.json  main.py  pyproject.toml  readme.md  requirements.txt  run_simple_tests.py  run_tests.py  settings.json  setup.py  tags.json  test_application.py  test_imports.py  window_positions.json  后续优化计划.md
.qoder/: plan.md
StickyNote.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backups/: backup_settings.json
core/: __init__.py  config.py  errors.py  logger.py  manager.py  note.py  settings.py  sticky_note.py  sticky_note_manager.py  utils.py
docs/: 01-项目概述.md  02-系统架构.md  03-功能需求说明书.md  04-模块详细设计.md  05-数据模型设计.md  06-主题系统设计.md  07-UI交互设计.md  08-开发规范.md  09-优化计划.md  IMPROVEMENT_PLAN.md  PROJECT_SPECIFICATION.md  README.md
features/: __init__.py  backup.py  encryption.py  export_import.py  formatter.py  group_view.py  groups.py  help_content.py  image_handler.py  import_export.py  linking.py  lock_dialog.py  markdown_renderer.py  pdf_exporter.py  performance.py  positioning.py  reminder.py  richtext.py  search.py  shortcuts.py  sync_dialog.py  tag.py  tags.py  template.py  theme_helper.py  trash.py  undo_redo.py  updater.py  version_history.py
notes/: note_1.json
styles/: classic_white.css  dark_modern.css  elegant_green.css  fresh_blue.css  gradient_blue.css  high_contrast.css  light_neon.css  midnight_black.css  ocean_teal.css  pastel_vibe.css  readme.md  soft_yellow.css  (+4 more)
(+29 files in other folders)
